Fix danmuku poll wrap problem. Close #41.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,11 @@
   // outline-offset: 2px;
 }
 
+/* danmuku poll wrap fix */
+.bili-danmaku-x-vote-an-num {
+  white-space: nowrap;
+}
+
 .dark {
   input,
   textarea {
